Options dialog opens on context menu button or mouse right click
Options dialog also opens on move right or swipe left when the guide overlay is visible
Guide overlay now also opens/closes on swipe left/right
When 'Enable enhancements for touch devices' is enabled, all guide overlay items are now full detail even when not selected

** 2015.3.25 **

Use more stable guide update method
Update guide every 55 to 65 minutes
On guide update failure, wait 5 minutes and try again - then return to normal interval
Fix for DeviceAuth being encoded with a trailing newline
Now logs addon version on startup

** 2015.3.20b1 **

Fix for error causing the addon to fail on startup when there is no guide data

***************
** 2015.3.19 **
***************
Initial public release
Retry fetching guide data if it fails on first attempt

** 2015.3.19a1 **

Fix for un-escaped URLs
Change name to 'HDHomeRun Live TV'
Get guide via https
Slightly darken currently playing background

** 2015.3.18 **

Use public guide data URL and DeviceAuth
Change 'Guide auto-hide delay seconds' default to 0
Add font conversion for skins other than Confluence
Added Gotham skin

** 0.0.10b **

Added setting 'Guide auto-hide delay seconds (0 = never hide)' default: 10
Context button now displays search input, allowing the user to set a channel filter
Some focus fixes

** 0.0.9b **

Added 'Enable enhancements for touch devices' to settings. Currently allows "flinging" the guide
Now hides DRM channels by default - enable with setting 'Show DRM channels'
Now detects whether lineup has any subchannels and simplifies channel entry (ie select always submits)
Channel entry now "backspaces" on nav back
Channel entry now limits to 4 digits before a '.'

** 0.0.8b **

Video now closes when the addon exits with a settings option to disable this behavior
Now, when entering channel numbers, select now inserts a period with a second select sumbitting the entry